--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -16,7 +16,9 @@
 <body>
 <div id="login-form">
     <div id="login-title">Log into Select Shop</div>
-    <button id="login-kakao-btn" onclick="location.href='https://kauth.kakao.com/oauth/authorize?client_id=dd9cfaf39b3212a8a6d2ad156ac45305&redirect_uri=http://localhost:8080/api/user/kakao/callback&response_type=code'">
+    <button id="login-kakao-btn"
+        th:data-url="|https://kauth.kakao.com/oauth/authorize?client_id=${kakaoApiKey}&redirect_uri=http://localhost:8080/api/user/kakao/callback&response_type=code|"
+        onclick="location.href=this.getAttribute('data-url')">
         카카오로 로그인하기
     </button>
     <button id="login-id-btn" onclick="location.href='/api/user/signup'">
